<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_80">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_toolbar_bg"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/space_30"
            android:text="冠宇科技访客系统"/>


    </RelativeLayout>


    <ImageView
        android:layout_below="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/icon_background"/>


    <RelativeLayout
        android:layout_width="@dimen/space_1400"
        android:layout_height="@dimen/space_800"
        android:layout_centerInParent="true"
        android:background="@color/color_ffffff">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/space_140"
            android:layout_marginBottom="@dimen/space_64">

            <include layout="@layout/layout_left_visitor"/>

            <ImageView
                android:layout_width="@dimen/space_2"
                android:layout_height="match_parent"
                android:background="@color/color_f3f3f3"
                android:contentDescription="@null"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginLeft="@dimen/space_90"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_60">

                    <ImageView
                        android:layout_width="@dimen/space_60"
                        android:layout_height="@dimen/space_60"
                        android:src="@mipmap/icon_visitor_info"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/space_80"
                        android:text="@string/appoint_detail_info"
                        android:textSize="@dimen/space_32"
                        android:textColor="@color/color_01cef5"/>

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/appiont_teacher_name_tv"
                        style="@style/lay_content_textview_style"
                        android:text="@string/appiont_teacher_name"/>

                    <TextView
                        android:layout_toRightOf="@+id/appiont_teacher_name_tv"
                        style="@style/lay_content_textview_style"
                        android:text="@string/appiont_state"
                        android:textColor="@color/color_01cef5"/>

                </RelativeLayout>


                <TextView
                    android:id="@+id/appiont_date_tv"
                    style="@style/lay_content_textview_style"
                    android:text="@string/appiont_date"/>

                <TextView
                    android:id="@+id/appiont_objective_tv"
                    style="@style/lay_content_textview_style"
                    android:text="@string/appiont_objective"/>

                <ImageView
                    android:layout_marginTop="@dimen/space_80"
                    android:id="@+id/appiont_close_iv"
                    android:layout_width="@dimen/space_106"
                    android:layout_height="@dimen/space_48"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_sure"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>